--- a/style.css
+++ b/style.css
@@ -5,17 +5,103 @@
 }
 
 .body {
-  width: 90%;
-  margin: 3rem auto;
+  background-color: white;
+  font-family: [Kumbh Sans];
 }
 
 .header {
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid #f7f8fd;
 }
 
 .menu {
+  width: 90%;
+  margin: 1rem auto;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+.button {
+  padding: 0.5rem;
+  border: none;
+  background-color: white;
+  cursor: pointer;
+}
+
+.nav__list {
+  display: none;
+}
+
+.nav__list--show {
+  display: block;
+}
+
+.img__photo {
+  width: 100%;
+  height: 45vh;
+}
+
+.text-wrapper {
+  width: 90%;
+  max-width: 40rem;
+  margin: 1rem auto;
+}
+
+.text__title {
+  color: #ff7d1a;
+  margin: 1rem 0;
+}
+
+.text__desc {
+  margin: 1rem 0;
+  line-height: 1.5rem;
+}
+
+.price-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.disscount {
+  color: #ff7d1a;
+  background-color: #ffede0;
+  padding: 0.2rem;
+  border-radius: 0.3rem;
+}
+
+.price {
+  text-decoration: line-through;
+}
+
+.submit {
+  margin: 2rem 0;
+  width: 100%;
+  padding: 1rem;
+  color: #ffede0;
+  background-color: #ff7d1a;
+  border: none;
+  border-radius: 0.4rem;
+}
+
+@media (min-width: 670px) {
+  .main {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    margin: 2rem auto;
+  }
+
+  .img__photo {
+    width: 90%;
+    height: 35vh;
+    border-radius: 0.3rem;
+  }
+
+  .price-wrapper {
+    justify-content: space-around;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
