--- a/style.scss
+++ b/style.scss
@@ -1,16 +1,93 @@
+$colors : (main: hsl(0, 0%, 100%),Orange: hsl(26, 100%, 55%),Pale: hsl(25, 100%, 94%));
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 .body{
-    width: 90%;
-    margin: 3rem auto;
+    // width: 90%;
+    background-color: map-get($colors,main);
+    font-family: [Kumbh Sans];
 }
 .header{
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid hsl(223, 64%, 98%);
 }
 .menu{
+width: 90%;
+margin: 1rem auto;
 display: flex;
 justify-content: space-between;
+align-items: center;
 }
+.button{
+    padding: .5rem;
+    border: none;
+    background-color: map-get($colors,main);
+    cursor: pointer;
+}
+.nav__list{
+display: none;
+ }
+ .nav__list--show{
+display: block;
+ }
+ .img__photo{
+     width: 100%;
+     height: 45vh;
+ }
+ .text-wrapper{
+    width: 90%;
+    max-width: 40rem;
+    margin: 1rem auto;
+ }
+ .text__title{
+     color: map-get($colors, Orange );
+     margin: 1rem 0;
+ }
+ .text__desc{
+     margin: 1rem 0;
+     line-height: 1.5rem;
+ }
+ .price-wrapper{
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+ }
+ .disscount{
+     color: map-get($colors,Orange );
+     background-color: map-get($colors,Pale );
+     padding: .2rem;
+     border-radius: .3rem;
+ }
+ .price{
+     text-decoration: line-through;
+ }
+ .submit{
+     margin: 2rem 0;
+     width: 100%;
+     padding: 1rem;
+     color: map-get($colors, Pale );
+     background-color: map-get($colors, Orange );
+     border: none;
+     border-radius: .4rem;
+ }
+
+
+ @media (min-width: 670px) {
+   .main{
+       display: flex;
+       justify-content: space-between;
+       align-items: center;
+       width: 80%;
+       margin: 2rem auto;
+   }
+   .img__photo{
+    width: 90%;
+    height: 35vh;
+    border-radius: .3rem;
+}
+.price-wrapper{
+    justify-content: space-around;
+}
+  }
+
