--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,19 @@ $colors : (main: hsl(0, 0%, 100%),Orange: hsl(26, 100%, 55%),Pale: hsl(25, 100%,
     background-color: map-get($colors,main);
     font-family: 'Kumbh Sans', sans-serif;
 }
+.backdrop{
+    display: none;
+    background-color: rgba(0,0,0,.5);
+    position: fixed;
+    top:0;
+    left:0;
+    height: 100vh;
+    width: 100vw;
+    z-index: 100;
+}
+.show{
+    display: block;
+}
 .header{
     border-bottom: 1px solid hsl(223, 64%, 98%);
 }
@@ -26,12 +39,6 @@ align-items: center;
 }
 .nav__list{
 display: none;
-position: absolute;
-left:0;
-top:0;
-background-color: white;
-width: 60%;
-height: 100vh;
  }
  .nav__item{
     list-style: none;
@@ -40,6 +47,13 @@ height: 100vh;
   }
  .nav__list--show{
 display: block;
+position: absolute;
+left:0;
+top:0;
+background-color: white;
+width: 60%;
+height: 100vh;
+z-index: 200;
  }
  .main{
      max-width: 45rem;
